Третий проект -- первая версия

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       name="description"
       content="Страница о взгляде на перфекционизм в работе и учёбе."
     />
-    <link rel="stylesheet" href="fonts/fonts.css" />
+    <link rel="stylesheet" href="fonts/font.css" />
     <link rel="stylesheet" href="styles/style.css" />
     <meta property="og:title" content="Надо сделать идеально" />
     <meta property="og:url" content="https://maybesofter.com/" />
