--- a/index.html
+++ b/index.html
@@ -1,41 +1,37 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Надо сделать идеально</title>
-    <link rel="icon" href="/images/Vector.ico" sizes="any" />
-    <link rel="icon" href="/images/Vector.svg" type="image/svg+xml" />
-    <link rel="apple-touch-icon" href="/images/apple-touch-icon.png" />
+    <link rel="icon" href="./icons/icon.ico" sizes="any" />
+    <link rel="icon" href="./icons/icon.svg" type="image/svg+xml" />
+    <link rel="apple-touch-icon" href="./icons/apple-touch-icon.png" />
     <meta
       name="description"
       content="Страница о взгляде на перфекционизм в работе и учёбе."
     />
-    <link rel="stylesheet" href="fonts/font.css" />
-    <link rel="stylesheet" href="styles/style.css" />
+    <link rel="stylesheet" href="./fonts/font.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
     <meta property="og:title" content="Надо сделать идеально" />
-    <meta property="og:url" content="https://maybesofter.com/" />
-    <meta property="og:image" content="/images/og.jpg" />
-    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="og:url" content="" />
+    <meta property="og:image" content="./images/og.png" />
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="og:description" content="Страница о взгляде на перфекционизм в работе и учёбе." />
+
+
+ 
   </head>
 
   <body>
-    <main class="container">
-      <h1 class="page__heading">
+    <h1 class="page__heading">        
         <span class="page__heading_text">Надо</span>
         <span class="page__heading_text">сделать</span>
-        <span class="page__heading_text_last">идеально</span>
-      </h1>
-
-      <video
-        class="video"
-        poster="./images/poster.png"
-        src="./video/cover-video.mp4"
-        autoplay
-        muted
-        loop
-      ></video>
-    </main>
+        <span class="page__heading_text">идеально</span>
+    </h1>
+    <video class="video" poster="./images/poster.png" muted autoplay loop>
+      <source src="./video/cover-video.mp4" />
+    </video>
   </body>
 </html>
