Третий проект -- правки

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="./fonts/font.css" />
     <link rel="stylesheet" href="./styles/style.css" />
     <meta property="og:title" content="Надо сделать идеально" />
-    <meta property="og:url" content="" />
+    <meta property="og:url" content="https://maybesofter.com/" />
     <meta property="og:image" content="./images/og.png" />
     <meta property="twitter:card" content="summary_large_image">
     <meta property="og:description" content="Страница о взгляде на перфекционизм в работе и учёбе." />
@@ -25,12 +25,8 @@
   </head>
 
   <body>
-    <h1 class="page__heading">        
-        <span class="page__heading_text">Надо</span>
-        <span class="page__heading_text">сделать</span>
-        <span class="page__heading_text">идеально</span>
-    </h1>
-    <video class="video" poster="./images/poster.png" muted autoplay loop>
+    <h1 class="page__heading">Надо<br />сделать<br />идеально</h1>
+     <video class="video" poster="./images/poster.png" muted autoplay loop>
       <source src="./video/cover-video.mp4" />
     </video>
   </body>
