Третий проект -- правки + prettier

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
@@ -17,16 +17,16 @@
     <meta property="og:title" content="Надо сделать идеально" />
     <meta property="og:url" content="https://maybesofter.com/" />
     <meta property="og:image" content="./images/og.png" />
-    <meta property="twitter:card" content="summary_large_image">
-    <meta property="og:description" content="Страница о взгляде на перфекционизм в работе и учёбе." />
-
-
- 
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta
+      property="og:description"
+      content="Страница о взгляде на перфекционизм в работе и учёбе."
+    />
   </head>
 
   <body>
     <h1 class="page__heading">Надо<br />сделать<br />идеально</h1>
-     <video class="video" poster="./images/poster.png" muted autoplay loop>
+    <video class="video" poster="./images/poster.png" muted autoplay loop>
       <source src="./video/cover-video.mp4" />
     </video>
   </body>
