Третий проект -- правки после ревью

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     />
   </head>
 
-  <body>
-    <h1 class="page__heading">Надо<br />сделать<br />идеально</h1>
+  <body class="page">
+    <h1 class="page__heading">Надо сделать идеально</h1>
     <video class="video" poster="./images/poster.png" muted autoplay loop>
       <source src="./video/cover-video.mp4" />
     </video>
